force-app/main/default/objects/B2B_OrderRecovery__c/B2B_OrderRecovery__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar datos de carrito por si hay un error TRAS recibir el pago</description>
    <label>B2B Order Recovery</label>
    <nameField>
        <displayFormat>BOR-{00000000}</displayFormat>
        <label>B2B Order Recovery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Order Recoveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>