force-app/main/default/objects/B2B_OrderRecovery__c/fields/AuxJSON__c.field-meta.xml
<CustomField>
    <fullName>AuxJSON__c</fullName>
    <label>AuxJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>