force-app/main/default/objects/B2B_OrderRecovery__c/fields/CartId__c.field-meta.xml
<CustomField>
    <fullName>CartId__c</fullName>
    <label>CartId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>