force-app/main/default/objects/B2B_OrderRecovery__c/fields/CartJSON__c.field-meta.xml
<CustomField>
    <fullName>CartJSON__c</fullName>
    <label>CartJSON</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>