force-app/main/default/objects/B2B_OrderRecovery__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>ErrorMessage</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>