force-app/main/default/objects/B2B_OrderRecovery__c/fields/PaymentJSON__c.field-meta.xml
<CustomField>
    <fullName>PaymentJSON__c</fullName>
    <label>PaymentJSON</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>