force-app/main/default/objects/B2B_OrderRecovery__c/fields/PaymentRequest__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentRequest</label>
    <referenceTo>PaymentRequest__c</referenceTo>
    <relationshipLabel>B2B Order Recoveries</relationshipLabel>
    <relationshipName>B2B_Order_Recoveries</relationshipName>
    <type>Lookup</type>
</CustomField>